--- a/app/freischaltung-bestaetigung.html
+++ b/app/freischaltung-bestaetigung.html
@@ -22,7 +22,7 @@
         </svg>
         Freischaltung beantragt!
       </h1>
-      <p class="subheadline subheadline__centered">Wir haben ihre Daten zur Prüfung weitergeleitet. Nach erfolgreicher Prüfung erhalten Sie eine E-Mail zur Aktivierung ihres Accounts. Den&nbsp;aktuellen Status ihres Zugangs können Sie jederzeit unter <a class="link" href="http://www.lekkerland24.de">www.lekkerland24.de</a> abfragen.</p>
+      <p class="subheadline subheadline__centered">Wir haben Ihre Daten zur Prüfung weitergeleitet. Nach erfolgreicher Prüfung erhalten Sie eine E-Mail zur Aktivierung ihres Accounts. Den&nbsp;aktuellen Status ihres Zugangs können Sie jederzeit unter <a class="link" href="http://www.lekkerland24.de">www.lekkerland24.de</a> abfragen.</p>
     </div>
 
     <footer class="footer">
