--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Lekkerland24 - Login Seite<br/><br/>
     <a href="freischaltung.html">Freischaltung</a><br/>
-    <a href="freischaltung.html">Neukunde Anmeldung</a>
+    <a href="passwort.html">Passwort anlegen</a>
 
     <!-- build:js js/main.min.js -->
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.js"></script>
